# evidence-news-scanner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: oss-application.md
src/news_scanner_v2/: __init__.py  auth_config.py  body_fetcher.py  breaking_hints.py  budget.py  cli.py  composer.py  config.py  db.py  delivery.py  discovery.py  dispatch.py  earnings_facts.py  events.py  evidence_contract.py  extractor.py  fetcher.py  io.py  legacy.py  llm.py  market_snapshot.py  market_theme.py  models.py  news_seed.py  pipeline.py  price_reaction.py  quality_golden.py  reports.py  sources.py  verification.py
tests/: test_auth_config.py  test_body_fetcher.py  test_breaking_hints.py  test_budget.py  test_cli_run.py  test_composer.py  test_config.py  test_db_schema.py  test_delivery.py  test_discovery.py  test_dispatch.py  test_earnings_facts.py  test_events.py  test_evidence_contract.py  test_extractor.py  test_extractor_replay.py  test_fetcher.py  test_llm.py  test_market_snapshot.py  test_market_theme.py  test_news_seed.py  test_pipeline_budget.py  test_pipeline_events.py  test_price_reaction.py  test_quality_golden.py  test_replay_quality.py  test_reports.py  test_sources.py  test_verification.py
tests/fixtures/: news_quality_golden_20260521.json
tools/: audit_golden_fixture.py  audit_live_quality.py  replay_quality.py
